move ember code to app dir

--- a/assets/index.html
+++ b/assets/index.html
@@ -73,13 +73,13 @@
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
   <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
   <script src="js/libs/ember-data-latest.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/router.js"></script>
-  <script src="js/models/snippet.js"></script>
-  <script src="js/models/store.js"></script>
-  <script src="js/controllers/snippets_controller.js"></script>
-  <script src="js/controllers/snippet_controller.js"></script>
-  <script src="js/views/edit_snippet_view.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/router.js"></script>
+  <script src="js/app/models/snippet.js"></script>
+  <script src="js/app/models/store.js"></script>
+  <script src="js/app/controllers/snippets_controller.js"></script>
+  <script src="js/app/controllers/snippet_controller.js"></script>
+  <script src="js/app/views/edit_snippet_view.js"></script>
 
 </body>
 </html>
