--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Ember Starter Kit</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel='stylesheet' href='js/libs/select2/select2.css'>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,16 +21,23 @@
           <ul id="snippet-list">
             {{#each filteredSnippets itemController="snippet"}}
               <li {{bindAttr class="isCompleted:completed isEditing:editing"}}>
+                <p>{{id}}</p>
                 {{#if isEditing}}
                   {{view Sharecode.EditSnippetView snippetBinding="this"}}
                   {{view Ember.TextField valueBinding='language'}}
+                  <hr />
+                  {{view Sharecode.Select2SelectView snippetBinding="this"}}
                   {{view Ember.TextArea valueBinding='body'}}
+                  <hr />
                   <button {{action "saveSnippet"}} >save</button>
                   <button {{action "restoreSnippet"}} >cancel</button>
                   <button {{action "removeSnippet"}} class="destroy">delete</button>
                 {{else}}
                   {{view Ember.Checkbox checkedBinding="isCompleted" class="toggle"}}
                   <label {{action "editSnippet" on="doubleClick"}}>{{name}}</label>
+                  {{#each tags}}
+                    <span>{{name}}</span>
+                  {{/each}}
                   <p>{{language}}</p>
                   <pre>{{body}}</pre>
                   <button {{action "editSnippet"}} >edit</button>
@@ -75,6 +83,7 @@
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
   <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
   <script src="js/libs/ember-data-latest.js"></script>
+  <script src="js/libs/select2/select2.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/router.js"></script>
   <script src="js/app/models/snippet.js"></script>
